<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="0dip" >

        <TextView
            android:id="@+id/baidu_pay_order_product"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dip"
            android:text="@string/trade_order_name" />

        <TextView
            android:id="@+id/baidu_pay_order_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textColor="@color/page_header_text"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="0dip" >

        <TextView
            android:id="@+id/baidu_pay_record_amount_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dip"
            android:text="@string/trade_order_money" />

        <TextView
            android:id="@+id/baidu_pay_record_amount"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textColor="@color/page_title_select"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="0dip" >

        <TextView
            android:id="@+id/baidu_pay_record_status_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_order_status" />

        <TextView
            android:id="@+id/baidu_pay_record_status"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/baidu_pay_record_order_label"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dip"
            android:text="@string/trade_order_num" />

        <TextView
            android:id="@+id/baidu_pay_record_order"
            style="@style/list_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:padding="0dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="0dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:id="@+id/baidu_pay_record_server_label"
                style="@style/list_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trade_order_type" />

            <TextView
                android:id="@+id/baidu_pay_record_server"
                style="@style/list_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                style="@style/list_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dip"
                android:text="@string/trade_order_time" />

            <TextView
                android:id="@+id/baidu_pay_record_date"
                style="@style/list_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:padding="0dip" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>