<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/aipay_gray"
    android:orientation="vertical" >

    <com.baifubao.pay.mobile.iapppaysecservice.res2jar.layout4portrait.TitleViewBar 
        android:id="@+id/v_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:text="@string/aipay_v_store_type"
                    android:textColor="@color/aipay_text_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_about_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/aipay_v_about"
                    android:textColor="@color/aipay_text_6992d7"
                    android:textSize="15sp" />
            </RelativeLayout>

            <com.baifubao.pay.mobile.iapppaysecservice.res2jar.layout4portrait.PayTypeView
                android:id="@+id/v_pay_type_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/empty_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="70dp"
                android:gravity="center" >

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateDrawable="@drawable/aipay_loading" />

                <TextView
                    android:id="@+id/reget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="50dp"
                    android:text="@string/aipay_click_reget"
                    android:textColor="@color/ebpay_text_999999"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/charge_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/aipay_v_tips"
                android:textColor="@color/aipay_text_555555"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>